--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: github
-  repo: W3Layouts/gatsby-starter-delog
+  name: TheNomanAhmed
+  repo: TheNomanAhmed/netlify-cms
 media_folder: static/assets
 public_folder: /assets
 collections:
