--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: TheNomanAhmed
+  name: github
   repo: TheNomanAhmed/netlify-cms
 media_folder: static/assets
 public_folder: /assets
